キャッシュを使うように修正

--- a/config/config.toml
+++ b/config/config.toml
@@ -1,6 +1,8 @@
 [server]
-    Port     = "8000"
     YPPrefix = "mp"
+    Port     = "8000"
+    LogPath  = "logs/yp.log"
+    Debug    = true
 
 [database]
     Host     = "localhost"
