--- a/env/docker/docker-compose.yml
+++ b/env/docker/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
-  yayp:
-    restart: always
-    build: ../../
-    ports:
-      - "8000:80"
-    container_name: yayp-web
+  #yayp:
+  #  restart: always
+  #  build: ../../
+  #  ports:
+  #    - "8000:80"
+  #  container_name: yayp-web
   peercast:
     restart: always
     image: titagaki/peercast-yt:latest
