--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,5 +1,5 @@
 MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=yayp
-PEERCAST_PORT=7145
-PEERCAST_PASSWORD=password
+PEERCAST_PORT=7144
+PEERCAST_PASSWORD=peer
 VOLUMES_PATH=~/volumes/yayp
